# rust-url-shortener

./: Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml  index.html  index.scss
backend/: .gitignore  Cargo.toml  Config.toml  Dockerfile
backend/migrations/: 001_init.sql  002_testing_data.sql
backend/src/: config.rs  endpoints.rs  lib.rs  main.rs  model.rs  redirection.rs  user.rs
src/: lib.rs  main.rs
src/app/: home.rs  login.rs  mod.rs  not_found.rs
src/components/: footer.rs  header.rs  list_errors.rs  mod.rs
src/hooks/: mod.rs  user_context.rs
src/services/: auth.rs  mod.rs  requests.rs  user_context_provider.rs
src/types/: mod.rs
