[package]
name = "url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
futures = "0.3.30"
serde = "1.0.197"
envy = "0.4.2"
dotenvy = "0.15.7"
log = "0.4.21"
simplelog = "0.12.2"
config = "0.14.0"
toml = "0.8.12"
axum = "0.7.4"
